# conmx

./: .gitmodules  Cargo.toml  cli.yml
locale/: en_US.json
src/: cli.rs  err.rs  localization.rs  main.rs
src/dmx/: dmx.rs  dmx_channel.rs  dmx_universe.rs  mod.rs
src/gui/: conmx.rs  mod.rs  style.rs
src/gui/components/grid/: drawable.rs  grid.rs  helpers.rs  mod.rs
src/gui/views/: mod.rs  tabview.rs
src/node/: connections.rs  edge.rs  err.rs  graph.rs  hooks.rs  mod.rs  node.rs  port.rs  tree.rs
